discussion/kv_engine/161699/161699_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48531: wip

Change-Id: I3b36d1ea264c37f9a8933bfd0523d796a18a4807

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-06 09:36:53.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-06 10:52:54.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40797/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\kv_bucket_test.cc(336): error C2039: "chkTask": is not a member of "KVBucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40797/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13184/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42: error: no member named "chkTask" in "KVBucket" [clang-diagnostic-error]
    ExecutorPool::get()->schedule(store->chkTask);
                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13184/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: no member named "chkTask" in "KVBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13184/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15639/ : FAILURE

Compile error at [2021-10-06T10:34:54.207Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: no member named "chkTask" in "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15639/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14782/ : FAILURE

Compile error at [2021-10-06T10:46:00.410Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: ?class KVBucket? has no member named ?chkTask?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14782/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23068/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13929/ : FAILURE

Compile error at [2021-10-06T10:07:07.233Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: no member named "chkTask" in "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13929/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15052/ : FAILURE

Compile error at [2021-10-06T10:31:00.438Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: ?class KVBucket? has no member named ?chkTask?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2801/ : FAILURE

Compile error at [2021-10-06T10:26:07.619Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: no member named "chkTask" in "KVBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2801/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2836/ : FAILURE

Compile error at [2021-10-06T10:21:18.519Z] ../kv_engine/engines/ep/tests/module_tests/kv_bucket_test.cc:336:42:
error: ?class KVBucket? has no member named ?chkTask?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2836/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34705/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11971/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
